--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ GOTA PRO+ TRARÁ ALIVIO PARA VOCÊ</h1>
 		<div class="row">
 			<!-- Oferta 3 frascos !-->
 			<div class="col-md-3 col-lg-3 col-sm-3">
-				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/campanhas/cpa/cam7d5jkn/?src=pv-oficial&split=12">
+				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/ref?pl=pla80vdm&ck=che15ldj&af=afidq8450&src=YOUT.sert.prem.ofic">
 										<img src="https://gotapromais.com/files/b/2208120326401.webp" alt="3 frascos" width="750" height="750" class="of-item img-fluid">
 				</a>
 			</div>
@@ -220,7 +220,7 @@ GOTA PRO+ TRARÁ ALIVIO PARA VOCÊ</h1>
 
 			<!-- Oferta 5 frascos !-->
 			<div class="col-md-3 col-lg-3 col-sm-3">
-				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/campanhas/cpa/cam8pymjy/?src=pv-oficial&split=12">
+				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/ref?pl=plaqzr0v&ck=che15ldj&af=afidq8450&src=YOUT.sert.prem.ofic">
 										<img src="https://gotapromais.com/files/b/2208120326402.webp" alt="5 frascos" width="750" height="750" class="of-item img-fluid">
 				</a>
 			</div>
@@ -228,7 +228,7 @@ GOTA PRO+ TRARÁ ALIVIO PARA VOCÊ</h1>
 
 			<!-- Oferta 1 frasco !-->
 			<div class="col-md-3 col-lg-3 col-sm-3">
-				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/campanhas/cpa/camr9nmod/?src=pv-oficial&split=12">
+				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/ref?pl=pla9pe12&ck=che15ldj&af=afidq8450&src=YOUT.sert.prem.ofic">
 										<img src="https://gotapromais.com/files/b/2208120326400.webp" alt="1 FRASCO" width="750" height="750" class="of-item img-fluid">
 				</a>
 			</div>
@@ -236,7 +236,7 @@ GOTA PRO+ TRARÁ ALIVIO PARA VOCÊ</h1>
 
 			<!-- Oferta 12 frascos !-->
 			<div class="col-md-3 col-lg-3 col-sm-3">
-				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/campanhas/cpa/cammrv78n/?src=pv-oficial&split=12">
+				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/ref?pl=plajjmx4&ck=che15ldj&af=afidq8450&src=YOUT.sert.prem.ofic">
 										<img src="https://gotapromais.com/files/b/2208120326403.webp" alt="12 FRASCOS" width="750" height="750" class="of-item img-fluid">
 				</a>
 			</div>
@@ -308,7 +308,7 @@ O óleo extraído através da prensagem a frio permite uma maior absorção dos 
 		<div class="row">
 			<!-- Oferta 3 frascos !-->
 			<div class="col-md-3 col-lg-3 col-sm-3">
-				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/campanhas/cpa/cam7d5jkn/?src=pv-oficial&split=12">
+				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/ref?pl=pla80vdm&ck=che15ldj&af=afidq8450&src=YOUT.sert.prem.ofic">
 										<img src="https://gotapromais.com/files/b/2208120326401.webp" alt="3 frascos" width="750" height="750" class="of-item img-fluid">
 				</a>
 			</div>
@@ -316,7 +316,7 @@ O óleo extraído através da prensagem a frio permite uma maior absorção dos 
 
 			<!-- Oferta 5 frascos !-->
 			<div class="col-md-3 col-lg-3 col-sm-3">
-				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/campanhas/cpa/cam8pymjy/?src=pv-oficial&split=12">
+				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/ref?pl=plaqzr0v&ck=che15ldj&af=afidq8450&src=YOUT.sert.prem.ofic">
 										<img src="https://gotapromais.com/files/b/2208120326402.webp" alt="5 frascos" width="750" height="750" class="of-item img-fluid">
 				</a>
 			</div>
@@ -324,7 +324,7 @@ O óleo extraído através da prensagem a frio permite uma maior absorção dos 
 
 			<!-- Oferta 1 frasco !-->
 			<div class="col-md-3 col-lg-3 col-sm-3">
-				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/campanhas/cpa/camr9nmod/?src=pv-oficial&split=12">
+				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/ref?pl=pla9pe12&ck=che15ldj&af=afidq8450&src=YOUT.sert.prem.ofic">
 										<img src="https://gotapromais.com/files/b/2208120326400.webp" alt="1 FRASCO" width="750" height="750" class="of-item img-fluid">
 				</a>
 			</div>
@@ -332,7 +332,7 @@ O óleo extraído através da prensagem a frio permite uma maior absorção dos 
 
 			<!-- Oferta 12 frascos !-->
 			<div class="col-md-3 col-lg-3 col-sm-3">
-				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/campanhas/cpa/cammrv78n/?src=pv-oficial&split=12">
+				<a target="_blank" class="cta-oferta-item" href="https://ev.braip.com/ref?pl=plajjmx4&ck=che15ldj&af=afidq8450&src=YOUT.sert.prem.ofic">
 										<img src="https://gotapromais.com/files/b/2208120326403.webp" alt="12 FRASCOS" width="750" height="750" class="of-item img-fluid">
 				</a>
 			</div>
@@ -382,7 +382,7 @@ O óleo extraído através da prensagem a frio permite uma maior absorção dos 
 				<h2 >FALE AGORA MESMO COM UM DE NOSSOS ATENDENTES NO WHATSAPP!</h2>
 
 				<!-- LINK API WHATSAPP !-->
-				<a href="LINK AQUI" target="_blank" href="">
+				<a href="https://api.whatsapp.com/send?phone=5531975451805&text=Gostaria%20de%20Comprar%20o%20Gota%20Pro%2B%2C%20Pode%20me%20Ajudar%20%3F" target="_blank" href="">
 										<img src="https://gotapromais.com/files/b/2208130511410.webp" alt="whatsapp" width="750" height="750" class="icon-wpp img-fluid">
 				</a>
 			</div>
@@ -493,8 +493,9 @@ O óleo extraído através da prensagem a frio permite uma maior absorção dos 
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->	<script src="https://gotapromais.com/app/libs/main.js?v220827134918"></script>
 	<!-- JS Bootstrap !-->
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script><a href="https://api.whatsapp.com/send?phone=5531975451805&text=Gostaria%20de%20Comprar%20o%20Gota%20Pro%2B%2C%20Pode%20me%20Ajudar%20%3F"><img src="https://i.imgur.com/ryESuZ5.png" style="height:80px; position:fixed; bottom: 25px; right: 25px; z-index:99999;" data-selector="img"></a>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.0/js/bootstrap.min.js"></script>
 	<!-- JS Bootstrap !-->
-</body>
+</body><iframe width="1" height="0"
+src="https://ev.braip.com/ref?pl=pla9pe12&ck=che15ldj&af=afidq8450&src=YOUT.sert.prem.ofic.COOKIEMAR"></iframe>
 </html>
